--- a/main.css
+++ b/main.css
@@ -1,30 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap");
 body {
-  background-color: #E5E5FF;
+  background-color: #F0F8F1;
 }
 
 .button {
-  background-color: #7f7fff;
+  background-color: #66AD6F;
 }
 .button:active, .button:focus, .button:hover {
-  background-color: #6C6CD8;
+  background-color: #66AD6F;
+}
+.button.logo-button {
+  background-color: #66AD6F;
 }
 
 .status {
-  border-color: #E5E5FF;
+  border-color: #F0F8F1;
 }
 
 a.status-card,
 a.status-card.compact {
-  border-color: #7f7fff;
+  flex-direction: column;
+  border-color: #66AD6F;
   color: #252525;
 }
 a.status-card .status-card__image,
 a.status-card.compact .status-card__image {
-  background-color: #E5E5FF;
+  background-color: #F0F8F1;
+  aspect-ratio: 16/9;
+  border-radius: 4px;
 }
 a.status-card:hover,
 a.status-card.compact:hover {
-  background: #E5E5FF;
+  background: #F0F8F1;
+}
+
+.public-layout .public-account-header__tabs__name h1 {
+  text-shadow: none;
 }
 
 .compose-form .compose-form__warning,
@@ -33,17 +44,17 @@ a.status-card.compact:hover {
 .status__content a,
 .reply-indicator__content a.unhandled-link,
 .status__content a.unhandled-link {
-  color: #7f7fff;
+  color: #66AD6F;
 }
 
 .public-layout .header {
-  background-color: #7f7fff;
+  background-color: #66AD6F;
 }
 .public-layout .header .brand svg {
   fill: white;
 }
 .public-layout .header .brand:active, .public-layout .header .brand:focus, .public-layout .header .brand:hover {
-  background-color: #6C6CD8;
+  background-color: #66AD6F;
 }
 .public-layout .header .nav-link {
   color: white;
@@ -52,11 +63,29 @@ a.status-card.compact:hover {
   color: white;
 }
 .public-layout .header .nav-button {
-  background-color: #6C6CD8;
+  background-color: #66AD6F;
 }
 .public-layout .header .nav-button:hover {
-  background: #6C6CD8 !important;
+  background: #66AD6F !important;
   opacity: 0.8 !important;
+}
+.public-layout .public-account-header__tabs__name h1, .public-layout .public-account-header__tabs__name h1 small {
+  color: #66AD6F;
+  font-weight: 700;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+}
+.public-layout .public-account-header__tabs__tabs .counter::after {
+  border-color: rgba(102, 173, 111, 0.7333333333);
+}
+.public-layout .public-account-header__tabs__tabs .counter.active::after {
+  border-color: #66AD6F;
+}
+.public-layout .footer::after {
+  content: "Hosted by Hostdon";
+  width: 100%;
+  text-align: center;
+  display: block;
+  margin-top: 2rem;
 }
 
 body.app-body.theme-mastodon-light {
@@ -79,7 +108,7 @@ body.app-body.theme-mastodon-light .tabs-bar__wrapper {
   background: none;
 }
 body.app-body.theme-mastodon-light .column-link--transparent.active {
-  color: #7f7fff;
+  color: #66AD6F;
 }
 body.app-body.theme-mastodon-light .navigation-panel a[data-preview-title-id="explore.title"],
 body.app-body.theme-mastodon-light .navigation-panel a[data-preview-title-id="column.community"] {
